--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d61be">  <td>22/07/21 15:27:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="6d61be">  <td>22/07/21 15:55:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">runScenario</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="6d61be">  <td>22/07/21 15:55:10</td>   <td>-18260</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
-<tr bgcolor="6d61be">  <td>22/07/21 15:27:34</td>   <td>-1095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="6d61be">  <td>22/07/21 15:55:43</td>   <td>13801</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
-<tr bgcolor="6d61be">  <td>22/07/21 15:27:35</td>   <td>-249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">runScenario</td> 
+<tr bgcolor="6d61be">  <td>22/07/21 15:55:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.sg.runner.RunnerTest@2034b64c]">runScenario</td> 
   <td>main@2068598972</td>   <td></td> </tr>
 </table>
